--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
                 <!-- <button> -->
             
                 <div class="type w-25" >
-                    <button class="color">upcoming match</button>
+                    <a href="upcomingmatch.html">
+                        <button class="color">upcoming match</button>
+                      </a> 
+                    
                     <button class="color">All group</button>
                     <button class="color" id="t-color">blog</button>
                 </div>
