--- a/index.html
+++ b/index.html
@@ -68,63 +68,63 @@
                             <div class="tnc">
                                 <img src="assets/Time Icon.png" alt="">
                                 <span>10h</span>
-                                <img src="/assets/Chat Icon.png" alt="">
+                                <img src="assets/Chat Icon.png" alt="">
                                 <span>24</span>
                             </div>
                         </div>
                     </div>
                     <div class="blog w-33">
-                        <img src="/assets/Blog Image.png" alt="">
+                        <img src="assets/Blog Image.png" alt="">
                         <div class="blog-content">
                             <button class="btn-outline">Transfer</button>
                             <h4>Transfer Live: Chlesea in talks 
                                 over Kimpenbe transfer</h4>
                             <div class="tnc">
-                                <img src="/assets/Time Icon.png" alt="">
+                                <img src="assets/Time Icon.png" alt="">
                                 <span>10h</span>
-                                <img src="/assets/Chat Icon.png" alt="">
+                                <img src="assets/Chat Icon.png" alt="">
                                 <span>24</span>
                             </div>
                         </div>
                     </div>
                     <div class="blog w-33">
-                        <img src="/assets/Blog Image.png" alt="">
+                        <img src="assets/Blog Image.png" alt="">
                         <div class="blog-content">
                             <button class="btn-outline">Transfer</button>
                             <h4>Transfer Live: Chlesea in talks 
                                 over Kimpenbe transfer</h4>
                             <div class="tnc">
-                                <img src="/assets/Time Icon.png" alt="">
+                                <img src="assets/Time Icon.png" alt="">
                                 <span>10h</span>
-                                <img src="/assets/Chat Icon.png" alt="">
+                                <img src="assets/Chat Icon.png" alt="">
                                 <span>24</span>
                             </div>
                         </div>
                     </div>
                     <div class="blog w-33">
-                        <img src="/assets/Blog Image.png" alt="">
+                        <img src="assets/Blog Image.png" alt="">
                         <div class="blog-content">
                             <button class="btn-outline">Transfer</button>
                             <h4>Transfer Live: Chlesea in talks 
                                 over Kimpenbe transfer</h4>
                             <div class="tnc">
-                                <img src="/assets/Time Icon.png" alt="">
+                                <img src="assets/Time Icon.png" alt="">
                                 <span>10h</span>
-                                <img src="/assets/Chat Icon.png" alt="">
+                                <img src="assets/Chat Icon.png" alt="">
                                 <span>24</span>
                             </div>
                         </div>
                     </div>
                     <div class="blog w-33">
-                        <img src="/assets/Blog Image.png" alt="">
+                        <img src="assets/Blog Image.png" alt="">
                         <div class="blog-content">
                             <button class="btn-outline">Transfer</button>
                             <h4>Transfer Live: Chlesea in talks 
                                 over Kimpenbe transfer</h4>
                             <div class="tnc">
-                                <img src="/assets/Time Icon.png" alt="">
+                                <img src="assets/Time Icon.png" alt="">
                                 <span>10h</span>
-                                <img src="/assets/Chat Icon.png" alt="">
+                                <img src="assets/Chat Icon.png" alt="">
                                 <span>24</span>
                             </div>
                         </div>
