--- a/upcomingmatch.html
+++ b/upcomingmatch.html
@@ -44,9 +44,9 @@
                 <div class="blog-section w-75">
                     <div class="blog w-33">
                         <div class="picture">
-                            <img src="./assets/Flag.png" alt="">
+                            <img src="assets/Flag.png" alt="">
                              <p>vs</p>
-                            <img src="./assets/germany Flag.png" alt="">
+                            <img src="assets/germany Flag.png" alt="">
                         </div>
                         <div class="blog-content">
                             <h4>Germany VS France</h4>
@@ -55,9 +55,9 @@
                     </div>
                     <div class="blog w-33">
                         <div class="picture">
-                            <img src="./assets/Flag.png" alt="">
+                            <img src="assets/Flag.png" alt="">
                              <p>vs</p>
-                            <img src="./assets/germany Flag.png" alt="">
+                            <img src="assets/germany Flag.png" alt="">
                         </div>
                         <div class="blog-content">
                             <h4>Germany VS France</h4>
@@ -66,9 +66,9 @@
                     </div>
                     <div class="blog w-33">
                         <div class="picture">
-                            <img src="./assets/Flag.png" alt="">
+                            <img src="assets/Flag.png" alt="">
                              <p>vs</p>
-                            <img src="./assets/germany Flag.png" alt="">
+                            <img src="assets/germany Flag.png" alt="">
                         </div>
                         <div class="blog-content">
                             <h4>Germany VS France</h4>
@@ -77,9 +77,9 @@
                     </div>
                     <div class="blog w-33">
                         <div class="picture">
-                            <img src="./assets/Flag.png" alt="">
+                            <img src="assets/Flag.png" alt="">
                              <p>vs</p>
-                            <img src="./assets/germany Flag.png" alt="">
+                            <img src="assets/germany Flag.png" alt="">
                         </div>
                         <div class="blog-content">
                             <h4>Germany VS France</h4>
@@ -88,9 +88,9 @@
                     </div>
                     <div class="blog w-33">
                         <div class="picture">
-                            <img src="./assets/Flag.png" alt="">
+                            <img src="assets/Flag.png" alt="">
                              <p>vs</p>
-                            <img src="./assets/germany Flag.png" alt="">
+                            <img src="assets/germany Flag.png" alt="">
                         </div>
                         <div class="blog-content">
                             <h4>Germany VS France</h4>
@@ -99,9 +99,9 @@
                     </div>
                     <div class="blog w-33">
                         <div class="picture">
-                            <img src="./assets/Flag.png" alt="">
+                            <img src="assets/Flag.png" alt="">
                              <p>vs</p>
-                            <img src="./assets/germany Flag.png" alt="">
+                            <img src="assets/germany Flag.png" alt="">
                         </div>
                         <div class="blog-content">
                             <h4>Germany VS France</h4>
