--- a/upcomingmatch.html
+++ b/upcomingmatch.html
@@ -21,7 +21,7 @@
             <button class="btn btn-danger">Watch live <i class="fa-solid fa-angle-right"></i></button>
         </div>
         <div class="w-33">
-            <img src="/assets/Banner image.png" alt="">
+            <img src="assets/Banner Image.png" alt="">
         </div>
         </header>
 
